# python-requests-playwright-mcp-promptfoo

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: demo.env  promptfoo.yaml  seed_data.yaml
demo-app/src/: package-lock.json
demo-app/src/backend/: package.json
demo-app/src/backend/config/: config.js
demo-app/src/frontend/: vite.config.js
docs/: playwright-mcp-notes.md  test_inventory.md  v2.0-implementation-complete.md  v2.0-pre-merge-qa-analysis.md
logs/: runtime_20251022T193113Z.json  runtime_20251022T193547Z.json  runtime_20251022T194035Z.json  runtime_20251022T194148Z.json  runtime_20251022T194217Z.json  runtime_20251022T194248Z.json
promptfoo/prompts/: articles.yaml
promptfoo/seed/: README.md  seed.json.deprecated
promptfoo/suites/articles/: promptfooconfig.yaml
promptfoo/suites/is_nlq_agent_prompt/: prompt.txt  promptfooconfig.yaml
promptfoo/suites/is_nlq_minimal_agent_prompt/: prompt.txt  promptfooconfig.yaml
promptfoo/suites/nlq_to_sql/: prompt.txt  promptfooconfig.yaml
promptfoo/suites/nlq_to_sql_experiment/: prompt.txt  promptfooconfig.yaml
promptfoo/suites/try_this_nlq_agent_prompt/: prompt.txt  promptfooconfig.yaml
scripts/: bootstrap_demo_app.sh  health_check.py  manage_demo_servers.py  port_utils.py  seed_demo_data.py  setup_site.py
src/data/: factory.py
src/health/: checks.py
src/utils/: api_client.py  logger.py  ollama_client.py
tests/: conftest.py
tests/api/: test_articles_api.py  test_authentication.py  test_comments.py  test_error_handling.py  test_pagination.py
tests/llm/: test_article_generation.py  test_article_quality_audit.py  test_promptfoo_suite.py
tests/llm/suites/articles/: promptfooconfig.yaml  prompts.yaml
tests/llm/suites/is_nlq_agent_prompt/: promptfooconfig.yaml
tests/llm/suites/nlq_to_sql/: promptfooconfig.yaml
tests/smoke/: test_smoke.py  test_smoke_api.py  test_smoke_ui.py
tests/ui/: conftest.py  test_articles_ui.py
