[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-requests-playwright-mcp-promptfoo"
version = "0.1.0"
description = "Local test automation stack with API, UI, and LLM prompt validation."
requires-python = ">=3.10"
dependencies = [
  "allure-pytest==2.15.0",
  "email-validator==2.1.0.post1",
  "httpx==0.27.2",
  "jinja2==3.1.4",
  "ollama==0.2.1",
  "playwright==1.45.1",
  "psycopg2-binary==2.9.11",
  "pydantic==2.12.3",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-playwright==0.7.1",
  "pytest-rerunfailures==14.0",
  "pytest-xdist==3.6.1",
  "pyyaml==6.0.2",
  "requests==2.32.3",
  "rich==13.9.3",
  "sqlalchemy==2.0.44",
  "tabulate==0.9.0",
  "typer==0.12.5",
  "python-dotenv==1.0.1"
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --alluredir=allure-results"
testpaths = [
  "tests"
]
markers = [
  "ui: marks UI tests that require Playwright browser",
  "api: marks API tests for the Conduit backend",
  "llm: marks prompt evaluation tests backed by Ollama",
  "smoke: lightweight smoke checks"
]
